// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRenovateWorkflowYml file added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: upgrade-main
on:
  schedule:
    - cron: 0 0 * * MON-FRI
  workflow_dispatch: {}
  push:
    branches:
      - main
    paths:
      - renovate.json5
      - .github/workflows/renovate.yml
  issues:
    types:
      - edited
  pull_request:
    types:
      - edited
concurrency:
  group: \${{ github.workflow }}-\${{ github.event_name == 'workflow_dispatch' && github.event_name || '' }}
jobs:
  upgrade-main:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Self-hosted Renovate
        uses: renovatebot/github-action@v39.0.1
        if: (github.event_name != 'issues' && github.event_name != 'pull_request') || github.actor != 'cu-infra-svc-git'
        with:
          configurationFile: renovate.json5
          token: x-access-token:\${{ secrets.RENOVATEBOT_GITHUB_TOKEN }}
        env:
          RENOVATE_HOST_RULES: '[{"matchHost":"https://npm.pkg.github.com/","hostType":"npm","token":"\${{ secrets.ALL_PACKAGE_READ_TOKEN }}"}]'
          RENOVATE_NPMRC: "@\${{ github.repository_owner }}:registry=https://npm.pkg.github.com"
          RENOVATE_ENABLED_MANAGERS: '["npm"]'
          RENOVATE_REPOSITORIES: '["\${{ github.repository }}"]'
          RENOVATE_FORCE: \${{ github.event_name == 'workflow_dispatch' && '{"schedule":null}' || '' }}
"
`;

exports[`addRenovateWorkflowYml override 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: upgrade-main
on:
  schedule:
    - cron: 0 0 * * MON-FRI
  workflow_dispatch: {}
  push:
    branches:
      - main
    paths:
      - renovate.json5
      - .github/workflows/renovate.yml
  issues:
    types:
      - edited
  pull_request:
    types:
      - edited
concurrency:
  group: \${{ github.workflow }}-\${{ github.event_name == 'workflow_dispatch' && github.event_name || '' }}
jobs:
  upgrade-main:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Self-hosted Renovate
        uses: renovatebot/github-action@v39.0.1
        if: (github.event_name != 'issues' && github.event_name != 'pull_request') || github.actor != 'cu-infra-svc-git'
        with:
          configurationFile: renovate.json5
          token: x-access-token:\${{ secrets.RENOVATEBOT_GITHUB_TOKEN }}
        env:
          RENOVATE_HOST_RULES: '[{"matchHost":"https://npm.pkg.github.com/","hostType":"npm","token":"\${{ secrets.ALL_PACKAGE_READ_TOKEN }}"}]'
          RENOVATE_NPMRC: "@\${{ github.repository_owner }}:registry=https://npm.pkg.github.com"
          RENOVATE_ENABLED_MANAGERS: '["npm"]'
          RENOVATE_REPOSITORIES: '["\${{ github.repository }}"]'
          RENOVATE_FORCE: \${{ github.event_name == 'workflow_dispatch' && '{"schedule":null}' || '' }}
foo: bar
"
`;

exports[`getRenovateOptions defaults 1`] = `
{
  "ignore": [
    "node",
    "@time-loop/clickup-projen",
  ],
  "ignoreProjen": true,
  "labels": [
    "renovate",
  ],
  "overrideConfig": {
    "automergeType": "pr",
    "extends": [
      "config:base",
      "group:recommended",
      "group:monorepos",
      "github>whitesource/merge-confidence:beta",
    ],
    "packageRules": [
      {
        "addLabels": [
          undefined,
        ],
        "allowedVersions": "!/^[0-9]+\\.[0-9]+\\.[0-9]+-(alpha|beta).*$/",
        "automerge": undefined,
        "groupName": "all non-major dependencies",
        "groupSlug": "all-minor-patch",
        "matchPackagePatterns": [
          "*",
        ],
        "matchUpdateTypes": [
          "minor",
          "patch",
        ],
      },
      {
        "addLabels": [
          "optional",
        ],
        "matchDepTypes": [
          "optionalDependencies",
        ],
      },
    ],
    "platformAutomerge": true,
    "prConcurrentLimit": 0,
    "prHourlyLimit": 0,
    "rangeStrategy": "bump",
  },
  "scheduleInterval": [
    "before 1am on Monday",
  ],
}
`;
